--- a/src/components/molecules/card/playlist.module.scss
+++ b/src/components/molecules/card/playlist.module.scss
@@ -7,7 +7,7 @@
 	border-radius: 16px;
 	overflow: hidden;
 	background-color: $ts-playlistH;
-	transition: background-color $transition-medium;
+	transition-duration: $transition-medium;
 	&,
 	&:hover {
 		color: $ts-dark;
