--- a/src/components/molecules/card/hat/index.module.scss
+++ b/src/components/molecules/card/hat/index.module.scss
@@ -29,7 +29,7 @@
 	cursor: pointer;
 	font-size: 0.9em;
 	background-color: var(--hatBg);
-	transition: background-color $transition-medium;
+	transition-duration: $transition-medium;
 	&:hover {
 		background-color: var(--hatHoverColor);
 	}
