--- a/src/components/molecules/card/post.module.scss
+++ b/src/components/molecules/card/post.module.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	flex-direction: column;
 	background-color: $ts-white;
-	transition: background-color $transition-medium;
+	transition-duration: $transition-medium;
 	&,
 	&:hover {
 		color: $ts-dark;
