Throw 404 for invalid routes based on language

--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -35,10 +35,9 @@
 			display: flex;
 			align-items: center;
 			color: $ts-midTone;
-		}
-		.icon,
-		.iconDisclosure {
-			transition: none; // FIX: https://stackoverflow.com/a/40512935
+			*:not(svg) {
+				transition: none; // FIX: https://stackoverflow.com/a/40512935
+			}
 		}
 	}
 	.navLink:hover {
