--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -133,12 +133,18 @@
 	}
 	.content {
 		flex: 0 0 100vw;
-		padding-left: $sidebar-width;
+		padding-left: #{$sidebar-width + 24px};
 		display: flex;
 		flex-direction: column;
 		overflow: hidden;
 	}
 	.searchBox.searchBox {
 		display: inherit;
+	}
+}
+
+@media (min-width: $breakpoint-xl) {
+	.content {
+		padding-left: #{$sidebar-width + 35px};
 	}
 }
