--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -72,7 +72,7 @@
 	top: 0;
 	display: flex;
 	flex-direction: column;
-	padding: 24px 24px 32px;
+	padding: 24px 24px calc(32px + env(safe-area-inset-bottom));
 	background: $ts-cream;
 	z-index: 1000;
 	transition: transform $transition-medium;
