Add FCBH disclaimer

--- a/src/containers/bible/book.module.scss
+++ b/src/containers/bible/book.module.scss
@@ -50,7 +50,13 @@
 }
 
 .definitions {
-	margin: 64px 0;
+	margin: 64px 0 0;
+}
+
+.disclaimer {
+	font-size: 11px;
+	line-height: 13.31px;
+	margin-bottom: 64px;
 }
 
 .chapters {
