--- a/src/containers/home.module.scss
+++ b/src/containers/home.module.scss
@@ -82,6 +82,59 @@
 	}
 }
 
+.newsletterPromoTitle {
+	margin-bottom: 8px;
+}
+.newsletterPromoKicker {
+	margin: 0;
+}
+.newsletterWrapper {
+	width: 100%;
+	@media (min-width: $breakpoint-lg) {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+}
+.newsletterBox {
+	margin: 16px 16px 0;
+	background: $ts-white;
+	border-radius: 16px;
+	overflow: hidden;
+	@media (min-width: $breakpoint-lg) {
+		margin: 48px;
+	}
+}
+.newsletterHat {
+	height: 49px;
+	display: flex;
+	align-items: center;
+	padding: 16px;
+	background: $ts-red;
+	> svg {
+		margin-top: 3px;
+		margin-right: 4px;
+	}
+}
+.newsletterBody {
+	padding: 16px;
+	color: $ts-dark;
+}
+.newsletterFieldRow {
+	@media (min-width: $breakpoint-lg) {
+		display: flex;
+		> * {
+			flex: 1 1 50%;
+			&:first-child {
+				margin-right: 8px;
+			}
+			&:last-child {
+				margin-left: 8px;
+			}
+		}
+	}
+}
+
 .footer {
 	margin-bottom: 8px;
 	display: flex;
