--- a/src/containers/home.module.scss
+++ b/src/containers/home.module.scss
@@ -77,6 +77,8 @@
 	position: relative;
 	overflow: hidden;
 	padding-top: 150%;
+	background: $ts-dark;
+	border-radius: 16px;
 	> * {
 		position: absolute;
 		top: 0;
