Disable pointer events for non-interactive progress bar

--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -43,6 +43,7 @@
 	--headingColor: var(--recordingTextColor);
 	--cardColor: var(--recordingTextSecondaryColor);
 	--partColor: var(--recordingAccent);
+	--progressColor: var(--recordingAccent);
 }
 
 .hat {
