--- a/src/containers/home.module.scss
+++ b/src/containers/home.module.scss
@@ -142,12 +142,12 @@
 	@media (min-width: $breakpoint-lg) {
 		display: flex;
 		> * {
-			flex: 1 1 50%;
+			max-width: 50%;
 			&:first-child {
-				margin-right: 8px;
+				padding-right: 8px;
 			}
 			&:last-child {
-				margin-left: 8px;
+				padding-left: 8px;
 			}
 		}
 	}
