Redo scripture songs section

--- a/src/components/molecules/card/base/withCardTheme.module.scss
+++ b/src/components/molecules/card/base/withCardTheme.module.scss
@@ -111,3 +111,8 @@
 	--cardBg: #{$ts-playlistH};
 	--cardHoverColor: #{$ts-darkened-playlistH};
 }
+
+.songBook {
+	--cardBg: #{$ts-songH};
+	--cardHoverColor: #{$ts-darkened-songH};
+}
