Fade in home footer on scroll

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -57,6 +57,7 @@ $breakpoint-xl: 1230px;
 
 $transition-quick: 150ms;
 $transition-medium: 300ms;
+$transition-long: 600ms;
 
 $loading-animation-duration: 5s;
 
