--- a/src/containers/home.module.scss
+++ b/src/containers/home.module.scss
@@ -158,6 +158,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	opacity: 0;
+	transition: opacity $transition-long ease-out;
+
+	&.footerVisible {
+		opacity: 1;
+	}
 
 	h3 {
 		font-size: 18px;
