--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -64,6 +64,9 @@ $loading-animation-duration: 5s;
 $sidebar-width: 230px;
 $miniplayer-height: 90px;
 
+$header-minWidth: 571px;
+$header-maxWidth: 771px;
+
 $content-maxWidth-sm: 520px;
 $content-maxWidth: 1500px;
 
