--- a/src/containers/collection/detail.module.scss
+++ b/src/containers/collection/detail.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @import '../../styles/common';
 
 .container {
@@ -5,10 +6,46 @@
 	background: $ts-dark;
 }
 
+.imageRow {
+	@media (min-width: $breakpoint-md) {
+		display: flex;
+		justify-content: space-between;
+	}
+	> .image {
+		flex: 0 0 calc(50% - #{math.div($grid-gap, 2)});
+		@media (min-width: $breakpoint-xl) {
+			flex: 0 0 calc(33.3333% - #{math.div($grid-gap, 1.5)});
+		}
+	}
+	> .image + * {
+		flex: 0 0 calc(50% - #{math.div($grid-gap, 2)});
+		@media (min-width: $breakpoint-xl) {
+			flex: 0 0 calc(66.6667% - #{math.div($grid-gap, 3)});
+		}
+	}
+}
+
 .image {
 	position: relative;
 	width: 100%;
-	height: 242px;
+	margin-bottom: 16px;
+	border-radius: 8px;
+	overflow: hidden;
+	> * {
+		border-radius: 8px;
+	}
+	> img {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		max-width: 100%;
+		border-radius: 0;
+		box-shadow: $ts-shadow-small-default;
+	}
+}
+.imageBackdrop {
+	filter: blur(8px);
 }
 
 .date {
