--- a/src/containers/blog/detail.module.scss
+++ b/src/containers/blog/detail.module.scss
@@ -57,9 +57,11 @@
 	font-family: $serif;
 
 	p,
-	li {
+	li,
+	blockquote {
 		font-size: 15px;
 		line-height: 22.25px;
+		margin: 0 0 16px;
 	}
 	a {
 		color: $ts-red;
@@ -68,6 +70,12 @@
 		margin: 0;
 		border-left: 0.5px solid $ts-red;
 		padding-left: 16px;
+	}
+	blockquote + blockquote {
+		padding-top: 16px;
+	}
+	blockquote + *:not(blockquote) {
+		margin-top: 16px;
 	}
 	img {
 		display: inline-block;
