Fix Bible versions padding on mobile

--- a/src/components/molecules/tease.module.scss
+++ b/src/components/molecules/tease.module.scss
@@ -4,10 +4,12 @@
 	border-top-left-radius: 24px;
 	border-top-right-radius: 24px;
 	overflow: hidden;
-	@media (max-width: #{$breakpoint-md - 1px}) {
-		margin: 0 -24px -24px;
-	}
 	@media (min-width: $breakpoint-md) {
 		border-radius: 24px;
+	}
+	&.fullBleed {
+		@media (max-width: #{$breakpoint-md - 1px}) {
+			margin: 0 -24px -24px;
+		}
 	}
 }
