--- a/src/components/organisms/libraryNav.module.scss
+++ b/src/components/organisms/libraryNav.module.scss
@@ -4,7 +4,10 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-	margin-bottom: 8px;
+	margin-bottom: 16px;
+	@media (min-width: $breakpoint-lg) {
+		margin-bottom: 8px;
+	}
 }
 
 .toggleButtons {
