--- a/src/components/molecules/player.module.scss
+++ b/src/components/molecules/player.module.scss
@@ -144,7 +144,7 @@
 .videoProgress {
 	--visualHeight: 4px;
 	--barColor: #{$ts-midTone};
-	--progressColor: #{$ts-salmon};
+	--progressColor: #{$ts-red};
 	position: relative;
 	top: -14px;
 }
