--- a/src/containers/home.module.scss
+++ b/src/containers/home.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @import '../styles/common';
 
 $max-width: 1042px;
@@ -103,7 +104,7 @@ $max-width: 1042px;
 		padding-top: calc((100vw - 300px) / 2);
 	}
 	@media (min-width: #{$max-width + $sidebar-width + (32px * 2)}) {
-		padding-top: #{$max-width / 2};
+		padding-top: #{math.div($max-width, 2)};
 	}
 }
 .featureSlide {
