--- a/src/components/molecules/jumpBar.module.scss
+++ b/src/components/molecules/jumpBar.module.scss
@@ -7,6 +7,27 @@
 	align-items: center;
 	color: $ts-midTone;
 	font-weight: 700;
+
+	@media (min-width: $breakpoint-lg) {
+		position: sticky;
+		top: 28px;
+		background: $ts-white;
+		padding-bottom: 8px;
+		z-index: 1;
+		margin-left: -8px;
+		padding-left: 8px;
+		margin-right: -8px;
+		padding-right: 8px;
+		&::before {
+			content: '';
+			position: absolute;
+			background: $ts-white;
+			left: 0;
+			right: 0;
+			top: -32px;
+			height: 32px;
+		}
+	}
 	> a {
 		width: 26px;
 		margin-right: 8px;
