--- a/src/components/organisms/libraryNav.module.scss
+++ b/src/components/organisms/libraryNav.module.scss
@@ -65,3 +65,56 @@
 		}
 	}
 }
+
+.columns {
+	margin: 8px 16px;
+	display: flex;
+	justify-content: space-between;
+	> * {
+		flex: 0 0 50%;
+		&:first-child {
+			margin-right: 16px;
+		}
+	}
+	h6 {
+		white-space: nowrap;
+	}
+}
+
+.optionGroup {
+	+ .optionGroup {
+		margin-top: 24px;
+	}
+	> * {
+		min-width: 140px;
+		margin-bottom: 16px;
+		display: flex;
+		align-items: center;
+		font-size: 12px;
+	}
+	a:hover {
+		color: $ts-dark;
+		text-decoration: none;
+	}
+	input {
+		-webkit-appearance: none;
+		appearance: none;
+		position: relative;
+		height: 16px;
+		width: 16px;
+		border: 1px solid $ts-midTone;
+		border-radius: 4px;
+		margin-right: 8px;
+		cursor: pointer;
+		&:checked {
+			border-color: $ts-red;
+			&:after {
+				content: url('/img/icon-check.svg');
+				position: absolute;
+				top: 3px;
+				left: 3px;
+				font-size: 8px;
+			}
+		}
+	}
+}
