--- a/src/components/molecules/buttonGuest.module.scss
+++ b/src/components/molecules/buttonGuest.module.scss
@@ -3,7 +3,22 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin: 0;
+	padding: 0;
+	background: none;
+	border: none;
+	cursor: pointer;
+	margin: 36px 0;
 	svg {
 		margin-left: 8px;
 	}
+}
+
+.intro {
+	margin: 0 0 16px;
+}
+
+.featuresList {
+	margin: 0 0 8px;
+	line-height: 1.2;
 }
