--- a/src/components/organisms/slider.module.scss
+++ b/src/components/organisms/slider.module.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	position: relative;
+	padding-bottom: 12px;
 }
 
 .grow > .slides {
@@ -73,9 +74,11 @@
 .buttonSquare.buttonSquare {
 	height: 40px;
 	width: 40px;
+	padding: 3.5px 7px;
 }
 
 .floatingControls {
+	padding-bottom: 0;
 	.slides {
 		align-items: stretch;
 		margin: 0;
